Shuffling info around pt1
Save point

Save point

Save point

Save point

Save point

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -1,10 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
-Configure conditional requirements for the following step types:^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+Conditional requirements are required or allowed for the following step types:^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
 
-::: {.panel-tabset}
-### Transitions
-
-#### {{< fa cube >}} Model Stage Change
+### {{< fa cube >}} Model Stage Change
 
 [optional]{.smallcaps .pink}
 
@@ -14,9 +11,7 @@ Configure conditional requirements for the following step types:^[[Workflow step
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-### Actions
-
-#### {{< fa arrow-pointer >}} User Action v2
+### {{< fa arrow-pointer >}} User Action v2
 
 [optional]{.smallcaps .pink}
 
@@ -38,7 +33,7 @@ Enable user action deadline
         - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
         - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
 
-#### {{< fa users >}} Approval
+### {{< fa users >}} Approval
 
 1. Click **{{< fa plus >}} Add Rule** under [approval group]{.smallcaps} to set your `AND` conditions.^[One approver per rule must provide approval.]
 
@@ -49,13 +44,11 @@ Enable user action deadline
 
 <!-- - Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved. -->
 
-#### {{< fa bullhorn >}} Broadcast
+### {{< fa bullhorn >}} Broadcast
 
 Select from either **Model Stakeholder Types**^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User Roles**.^[[Manage roles](/guide/configuration/manage-roles.qmd)]
 
-### Conditional
-
-#### {{< fa maximize >}} Condition Branch
+### {{< fa maximize >}} Condition Branch
 
 1. Under each branch's **[conditions]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
@@ -63,7 +56,7 @@ Select from either **Model Stakeholder Types**^[[Manage model stakeholder types]
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-#### {{< fa clock >}} Wait
+### {{< fa clock >}} Wait
 
 Select when you would like to [resume workflow:]{.smallcaps}
 
@@ -74,8 +67,6 @@ Select when you would like to [resume workflow:]{.smallcaps}
     a. Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
     b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
     c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
-
-:::
 
 ::::
 
