--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -1,9 +1,6 @@
 :::: {.content-visible unless-format="revealjs"}
-::: {.panel-tabset}
 
-### Transitions
-
-#### {{< fa cube >}} Model Stage Change
+### {{< fa cube >}} Model Stage Change
 
 - Transitions a model into another stage.
 - Requires available model stages associated with the workflow.^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)]
@@ -14,7 +11,7 @@
 | [set model stage to]{.smallcaps} | Select the model stage to transition to. |
 : **{{< fa cube >}} Model Stage Change** step configuration {.hover tbl-colwidths="[40,60]"}
 
-#### {{< fa wifi >}} Workflow State Change
+### {{< fa wifi >}} Workflow State Change
 Transitions the workflow into another workflow state.^[[Workflow states](/guide/workflows/setting-up-workflows.qmd#workflow-states)]
 
 | Field | Description |
@@ -23,9 +20,7 @@ Transitions the workflow into another workflow state.^[[Workflow states](/guide/
 | [progress]{.smallcaps} | Indicate the progress of the workflow at this transition into the next state. |
 : **{{< fa wifi >}} Workflow State Change** step configuration {.hover tbl-colwidths="[30,70]"}
 
-### Actions
-
-#### {{< fa arrow-pointer >}} User Action v2
+### {{< fa arrow-pointer >}} User Action v2
 
 Creates a button that performs an action on behalf of the user.
 
@@ -38,7 +33,7 @@ Creates a button that performs an action on behalf of the user.
 | [optional fields]{.smallcaps} (optional) | Include optional inventory fields alongside your action.[^step-types-1]  |
 : **{{< fa arrow-pointer >}} User Action v2** step configuration {.hover tbl-colwidths="[40,60]"}
 
-#### {{< fa users >}} Approval
+### {{< fa users >}} Approval
 
 Display a preconfigured message to users in the selected **[approval group]{.smallcaps}**.
 
@@ -52,7 +47,7 @@ Display a preconfigured message to users in the selected **[approval group]{.sma
 | Approval Message | When your workflow reaches this {{< fa users >}} Approval step, the selected [approval group]{.smallcaps}  will shown this message.^[Enter in a **[title]{.smallcaps}** and a **[message]{.smallcaps}** to display.] |
 : **{{< fa users >}} Approval** step configuration {.hover tbl-colwidths="[35,65]"}
 
-#### {{< fa bullhorn >}} Broadcast
+### {{< fa bullhorn >}} Broadcast
 
 Send email notifications to users in selected groups.
 
@@ -65,9 +60,7 @@ Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional 
 | [message]{.smallcaps} | Enter the body of the email.[^step-types-3] |
 : **{{< fa bullhorn >}} Broadcast** step configuration {.hover tbl-colwidths="[25,75]"}
 
-### Conditional
-
-#### {{< fa maximize >}} Condition Branch
+### {{< fa maximize >}} Condition Branch
 
 - Allows diverging paths based on conditional requirements.
 - A `default` branch will be automatically included as a catch-all `else` path to ensure that your conditional logic is complete.
@@ -87,7 +80,7 @@ To configure a condition branch:
 
     Proceed with linking the Condition Branch with your subsequent steps.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
 
-#### {{< fa clock >}} Wait
+### {{< fa clock >}} Wait
 
 - Creates a time condition for displaying next available action.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
 - Used to enforce a time delay or a calendar date milestone.
@@ -107,18 +100,22 @@ To configure a wait step, select when you would like to [resume workflow:]{.smal
 | Time Delta from Specified Date on Model Field | [model field]{.smallcaps},^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] [time delta direction]{.smallcaps}, [wait duration]{.smallcaps} | Wait for a calculated time relative to a date in a model field on a per model basis. If the selected field is empty^[Make model inventory fields **[required when creating models]{.smallcaps}** to ensure necessary fields have valid values.] or the milestone date inputted is in the past, the next workflow step will display immediately. |
 : **{{< fa clock >}} Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
-### Workflow Logic
-
-#### {{< fa arrow-right-arrow-left >}} Run Workflow
+### {{< fa arrow-right-arrow-left >}} Run Workflow
 
 Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
 
-#### {{< fa circle-stop >}} End
+### {{< fa circle-stop >}} Webhook
+
+change fa icon
+
+### {{< fa circle-stop >}} HTTP Request
+
+change fa icon
+
+### {{< fa circle-stop >}} End
 
 - Designates the end of your workflow.
 - Use this step when all of your other steps have been configured and linked together.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
-:::
-
 
 <!-- ADDITIONAL FOOTNOTES -->
 
@@ -141,6 +138,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
     1. Include optional details about the model the workflow is running on using the **{ } Insert Variable** drop-down.
     2. Click on the **Preview** tab and choose a model under **[select model for preview]{.smallcaps}** to confirm how the notification will appear when rendered.
+
 ::::
 
 
