--- a/site/guide/workflows/introduction-to-workflows.qmd
+++ b/site/guide/workflows/introduction-to-workflows.qmd
@@ -2,7 +2,7 @@
 title: "Introduction to workflows"
 date: last-modified
 listing:
-  - id: workflow-introduction
+  - id: workflow-elements
     type: grid
     max-description-length: 250
     sort: false
@@ -20,7 +20,13 @@ Models in your model inventory transition through your organization's custom mod
 
 ## Workflow elements
 
+:::{#workflow-elements}
+:::
+
 ## What's next
+
+- [Setting up workflows](setting-up-workflows.qmd)
+- [Working with workflows](working-with-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
