--- a/site/guide/workflows/workflow-step-types.qmd
+++ b/site/guide/workflows/workflow-step-types.qmd
@@ -2,3 +2,11 @@
 title: "Workflow step types"
 date: last-modified
 ---
+
+Select from a variety of workflow step types to build workflows from.
+
+::: {.callout}
+For more assistance configuring workflow step types, refer to our [Workflow configuration examples](workflow-configuration-examples.qmd#workflow-step-type-examples).
+:::
+
+{{< include /guide/workflows/_workflow-step-types.qmd >}}
