Adding placeholder for new steps in docs

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -68,6 +68,14 @@ Select when you would like to [resume workflow:]{.smallcaps}
     b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
     c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
 
+### {{< fa circle-nodes >}} Webhook
+
+no free fa icon for webhook :(
+
+### {{< fa cloud-arrow-up >}} HTTP Request
+
+placeholder
+
 ::::
 
 
