--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -104,13 +104,13 @@ To configure a wait step, select when you would like to [resume workflow:]{.smal
 
 Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
 
-### {{< fa circle-stop >}} Webhook
+### {{< fa circle-nodes >}} Webhook
 
-change fa icon
+no free fa icon for webhook :(
 
-### {{< fa circle-stop >}} HTTP Request
+### {{< fa cloud-arrow-up >}} HTTP Request
 
-change fa icon
+placeholder
 
 ### {{< fa circle-stop >}} End
 
