Pt2: Editing links to workflow step types

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Conditional requirements are required or allowed for the following step types:^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+Conditional requirements are required or allowed for the following step types:^[[Workflow step types](/guide/workflows/workflow-step-types.qmd)]
 
 ### {{< fa cube >}} Model Stage Change
 
