--- a/site/guide/workflows/_link-workflow-together.qmd
+++ b/site/guide/workflows/_link-workflow-together.qmd
@@ -25,7 +25,7 @@ Hover over a workflow step to view an animation of the steps connecting to and f
 
 ##### Link approval steps
 
-{{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+{{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:^[[Workflow step types](/guide/workflows/workflow-step-types.qmd)]
 
 a. First, configure an **{{< fa users >}} Approval** step.
 
