--- a/site/guide/workflows/introduction-to-workflows.qmd
+++ b/site/guide/workflows/introduction-to-workflows.qmd
@@ -20,6 +20,8 @@ Models in your model inventory transition through your organization's custom mod
 
 ## Workflow elements
 
+A workflow is comprised of an interplay of these elements:
+
 :::{#workflow-elements}
 :::
 
