--- a/site/guide/workflows/manage-workflow-tasks.qmd
+++ b/site/guide/workflows/manage-workflow-tasks.qmd
@@ -61,7 +61,7 @@ Once completed, tasks will be removed from your view.
 
 <!-- FOOTNOTES -->
 
-[^1]: [Workflow step types](setting-up-workflows.qmd#workflow-step-types)
+[^1]: [Workflow step types](workflow-step-types.qmd)
 
 [^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
