Pt3: Editing links to conditional requirements

--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -41,7 +41,7 @@ To manually start workflows[^initiate-workflows]:
 
 ### Resume workflows
 
-To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd)]
 
 ::: {.panel-tabset}
 
