--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -262,7 +262,7 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^6]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
-[^7]: [Conditional requirements](setting-up-workflows.qmd#conditional-requirements)
+[^7]: [Conditional requirements](conditional-requirements.qmd)
 
 [^8]: ![Adding a workflow that is initiated when a model has a scheduled deployment date](example_model-deployment.png){fig-alt="A screenshot showing the modal for adding a workflow that is initiated when a model has a scheduled deployment date" .screenshot group="model-deployment"}
 
