Pt4: Editing links to workflow states

--- a/site/guide/workflows/_workflow-states.qmd
+++ b/site/guide/workflows/_workflow-states.qmd
@@ -66,6 +66,6 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 :::: {.content-hidden unless-format="revealjs"}
 Workflow states are statuses unique to a specific workflow, discrete from model stages.
 
-Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step, or [via the **{{< fa gear >}} Settings** page](/guide/workflows/setting-up-workflows.qmd#workflow-states){target="blank"}.
+Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step, or [via the **{{< fa gear >}} Settings** page](/guide/workflows/workflow-states.qmd){target="blank"}.
 
 ::::
