--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -12,7 +12,7 @@
 : **{{< fa cube >}} Model Stage Change** step configuration {.hover tbl-colwidths="[40,60]"}
 
 ### {{< fa wifi >}} Workflow State Change
-Transitions the workflow into another workflow state.^[[Workflow states](/guide/workflows/setting-up-workflows.qmd#workflow-states)]
+Transitions the workflow into another workflow state.^[[Workflow states](/guide/workflows/workflow-states.qmd)]
 
 | Field | Description |
 |---:|---|
