--- a/site/guide/workflows/manage-workflow-tasks.qmd
+++ b/site/guide/workflows/manage-workflow-tasks.qmd
@@ -75,7 +75,7 @@ Once completed, tasks will be removed from your view.
 
 [^7]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^8]: [Workflow states](setting-up-workflows.qmd#workflow-states)
+[^8]: [Workflow states](workflow-states.qmd)
 
 [^9]: [Configure workflows](configure-workflows.qmd)
 
