--- a/site/guide/workflows/_transition-workflow-examples.qmd
+++ b/site/guide/workflows/_transition-workflow-examples.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-While your model stages^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)] and workflows states^[[Workflow states](/guide/workflows/setting-up-workflows.qmd#workflow-states)] are custom to your organization, some examples are:
+While your model stages^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)] and workflows states^[[Workflow states](/guide/workflows/workflow-states.qmd)] are custom to your organization, some examples are:
 
 - **To submit model documentation for validation** — Click **Ready for Validation** to indicate that a model developer has completed the initial model documentation and is ready to have it validated. Add any notes that need to be included and then click Ready for Validation.
 - **To submit validation reports for review and approval** — Click **Ready for Review** to indicate that you have completed your initial model validation report, fill in the mandatory notes, and submit.
