--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -245,7 +245,7 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Workflow states](setting-up-workflows.qmd#workflow-states)
+[^3]: [Workflow states](workflow-states.qmd)
 
 [^4]: ![Adding a workflow that initiates on model validation](example_model-validation.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model validation" .screenshot group="model-validation"}
 
@@ -260,7 +260,7 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^5]: [Manage model stages](manage-model-stages.qmd)
 
-[^6]: [Workflow states](setting-up-workflows.qmd#workflow-states)
+[^6]: [Workflow states](workflow-states.qmd)
 
 [^7]: [Conditional requirements](conditional-requirements.qmd)
 
@@ -277,11 +277,11 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^9]: [Manage model stages](manage-model-stages.qmd)
 
-[^10]: [Workflow states](setting-up-workflows.qmd#workflow-states)
+[^10]: [Workflow states](workflow-states.qmd)
 
 [^11]: [Manage model stages](manage-model-stages.qmd)
 
-[^12]: [Workflow states](setting-up-workflows.qmd#workflow-states)
+[^12]: [Workflow states](workflow-states.qmd)
 
 [^13]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
