Minor overview edits

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -15,6 +15,8 @@ listing:
 
 Integrations connect ValidMind with the external tools your teams rely on so data, workflows, and reporting stay aligned without manual handoffs.
 
+With integrations, you can:
+
 - Streamline data exchange between ValidMind and cloud platforms to keep datasets current.
 - Standardize authentication and permissions to manage access consistently across environments.
 - Trigger downstream actions in project tracking or service desk tools when model events occur.
@@ -23,11 +25,20 @@ Integrations connect ValidMind with the external tools your teams rely on so dat
 
 ### Key concepts
 
-- **Integration** — The part of ValidMind designed to exchange data or actions with another system, such as REST APIs or webhooks.
-- **Secret** — A credential that stores the API key, password, or token required by the external service.
-- **Connection** — A packaged adapter that knows how to authenticate, map data, and orchestrate workflows with a specific third-party platform.
-- **HTTP request** — A workflow step that sends data from ValidMind to another service.
-- **Webhook** — A workflow step that does the opposite. Another system sends a POST request to a secure ValidMind URL to start the workflow.
+**Integration**
+: The part of ValidMind designed to exchange data or actions with another system, such as REST APIs or webhooks.
+
+**Secret**
+: A credential that stores the API key, password, or token required by the external service.
+
+**Connection**
+: A packaged adapter that knows how to authenticate, map data, and orchestrate workflows with a specific third-party platform.
+
+**HTTP request**
+: A workflow step that sends data from ValidMind to another service.
+
+**Webhook**
+: A workflow step that does the opposite to an HTTP request. Another system sends a POST request to a secure ValidMind URL to start the workflow.
 
 ### How workflows support integrations
 
