--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -1,9 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
-Conditional requirements are required or allowed for the following step types:^[[Workflow step types](/guide/workflows/workflow-step-types.qmd)]
+Conditional requirements are required or optional for the following step types:^[[Workflow step types](/guide/workflows/workflow-step-types.qmd)]
 
-### {{< fa cube >}} Model Stage Change
-
-[optional]{.smallcaps .pink}
+### {{< fa cube >}} Model Stage Change [optional]{.smallercaps .pink}
 
 1. Under **[when these conditions are met]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
@@ -11,9 +9,7 @@ Conditional requirements are required or allowed for the following step types:^[
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-### {{< fa arrow-pointer >}} User Action v2
-
-[optional]{.smallcaps .pink}
+### {{< fa arrow-pointer >}} User Action v2 [optional]{.smallercaps .pink}
 
 User display rules
 : 1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
@@ -33,7 +29,7 @@ Enable user action deadline
         - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
         - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
 
-### {{< fa users >}} Approval
+### {{< fa users >}} Approval [required]{.smallercaps .pink}
 
 1. Click **{{< fa plus >}} Add Rule** under [approval group]{.smallcaps} to set your `AND` conditions.^[One approver per rule must provide approval.]
 
@@ -44,11 +40,11 @@ Enable user action deadline
 
 <!-- - Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved. -->
 
-### {{< fa bullhorn >}} Broadcast
+### {{< fa bullhorn >}} Broadcast [required]{.smallercaps .pink}
 
 Select from either **Model Stakeholder Types**^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User Roles**.^[[Manage roles](/guide/configuration/manage-roles.qmd)]
 
-### {{< fa maximize >}} Condition Branch
+### {{< fa maximize >}} Condition Branch [required]{.smallercaps .pink}
 
 1. Under each branch's **[conditions]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
@@ -56,7 +52,7 @@ Select from either **Model Stakeholder Types**^[[Manage model stakeholder types]
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-### {{< fa clock >}} Wait
+### {{< fa clock >}} Wait [required]{.smallercaps .pink}
 
 Select when you would like to [resume workflow:]{.smallcaps}
 
@@ -68,11 +64,7 @@ Select when you would like to [resume workflow:]{.smallcaps}
     b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
     c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
 
-### {{< fa circle-nodes >}} Webhook
-
-no free fa icon for webhook :(
-
-### {{< fa cloud-arrow-up >}} HTTP Request
+### {{< fa cloud-arrow-up >}} HTTP Request [optional]{.smallercaps .pink}
 
 placeholder
 
