--- a/site/guide/workflows/_configure-workflow-steps.qmd
+++ b/site/guide/workflows/_configure-workflow-steps.qmd
@@ -15,7 +15,7 @@ To add or edit workflow steps:
 1. After you've configured a step,^[To delete a step, refer to: [Delete workflow steps](/guide/workflows/configure-workflows.qmd#delete-workflow-steps)] you can then [link your workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together).
 
 ::: {.callout}
-Refer to [Setting up workflows](/guide/workflows/setting-up-workflows.qmd#workflow-elements) for information on available step types and details on how to set up conditional requirements.
+Refer to [Introduction to workflows](/guide/workflows/introduction-to-workflows.qmd#workflow-elements) for information on available step types and details on how to set up conditional requirements.
 
 :::
 
