Remove slop from features list

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -17,11 +17,11 @@ Integrations connect ValidMind with the external tools your teams rely on so dat
 
 With integrations, you can:
 
-- Streamline data exchange between ValidMind and cloud platforms to keep datasets current.
-- Standardize authentication and permissions to manage access consistently across environments.
-- Trigger downstream actions in project tracking or service desk tools when model events occur.
-- Sync risk and compliance evidence across systems to maintain a single source of truth.
-- Embed ValidMind insights inside partner applications so stakeholders can act where they already work.
+- Exchange data between ValidMind and other platforms.
+- Sync data across systems to maintain a single source of truth.
+- Trigger downstream actions in workflows on the {{< var vm.platform >}} when events in another system occur.
+- Perform actions in another system when events occur on the {{< var vm.platform >}}.
+- Standardize authentication and permissions to manage access consistently.
 
 ### Key concepts
 
