--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -106,7 +106,29 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 ### {{< fa circle-nodes >}} Webhook
 
-no free fa icon for webhook :(
+When a workflow reaches a webhook step, the workflow is paused. Set up a webhook step to listen for a `POST` request that will resume the workflow:
+
+#### Copy webhook URL
+
+Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard.
+
+Send your `POST` request to this webhook URL.
+
+#### Configure and copy payload
+
+1. Under [select target model for payload]{.smallcaps}, choose a model from your inventory^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)] to populate the target for the payload.
+
+2. Click **{{< fa copy >}} Copy** to the right of Payload to copy the payload to your clipboard.
+
+    Send this payload to the webhook URL in your `POST` request.
+
+#### Copy authentication headers
+
+1. Click **{{< fa copy >}}** to the right of the the `x-api-key` and its value to copy them to your clipboard.
+2. Click **{{< fa copy >}}** to the right of the the `x-api-secret` and its value to copy them to your clipboard.
+3. Include these headers with your `POST` request to authenticate your call.
+
+: **{{< fa clock >}} Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
 ### {{< fa cloud-arrow-up >}} HTTP Request
 
@@ -176,6 +198,10 @@ Creates a time condition for displaying next available action.
 #### {{< fa arrow-right-arrow-left >}} Run Workflow
 
 Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
+
+### {{< fa circle-nodes >}} Webhook
+
+When a workflow reaches a webhook step, the workflow is paused. Set up a webhook step to listen for a `POST` request that will resume the workflow.
 
 #### {{< fa circle-stop >}} End
 
