--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -106,13 +106,15 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 ### {{< fa circle-nodes >}} Webhook
 
-When a workflow reaches a webhook step, the workflow is paused. Set up a webhook step to listen for a `POST` request that will resume the workflow:
+When a workflow reaches a webhook step, the workflow will be paused. Set up a webhook step to listen for a `POST` request that resumes the workflow:
+
+::: {.panel-tabset}
 
 #### Copy webhook URL
 
-Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard.
+- Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard.
 
-Send your `POST` request to this webhook URL.
+- Send your `POST` request to this webhook URL.
 
 #### Configure and copy payload
 
@@ -124,11 +126,13 @@ Send your `POST` request to this webhook URL.
 
 #### Copy authentication headers
 
-1. Click **{{< fa copy >}}** to the right of the the `x-api-key` and its value to copy them to your clipboard.
-2. Click **{{< fa copy >}}** to the right of the the `x-api-secret` and its value to copy them to your clipboard.
-3. Include these headers with your `POST` request to authenticate your call.
+- Click **{{< fa copy >}}** to the right of the the `x-api-key` and its value to copy them to your clipboard.
 
-: **{{< fa clock >}} Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
+- Click **{{< fa copy >}}** to the right of the the `x-api-secret` and its value to copy them to your clipboard.
+
+- Include these headers with your `POST` request to authenticate your call.
+
+:::
 
 ### {{< fa cloud-arrow-up >}} HTTP Request
 
@@ -201,7 +205,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 ### {{< fa circle-nodes >}} Webhook
 
-When a workflow reaches a webhook step, the workflow is paused. Set up a webhook step to listen for a `POST` request that will resume the workflow.
+When a workflow reaches a webhook step, the workflow will be paused. Set up a webhook step to listen for a `POST` request that resumes the workflow.
 
 #### {{< fa circle-stop >}} End
 
