--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -136,7 +136,20 @@ When a workflow reaches a webhook step, the workflow will be paused. Set up a we
 
 ### {{< fa cloud-arrow-up >}} HTTP Request
 
-placeholder
+Set up a workflow step to send an HTTP request:
+
+| Field | Description |
+|---:|---|
+| [url]{.smallcaps} | Enter in the URL to send the HTTP request to. |
+| [method]{.smallcaps} | Select the HTTP request method: `GET`, `POST`, `PUT` `DELETE` |
+| [timeout (seconds)]{.smallcaps} | Enter in a request timeout in seconds. |
+| [fail on non-]{.smallcaps}[2]{.smallercaps}[xx]{.smallcaps}  (optional) | Toggle whether or not the request will be considered failed if the response status code is not in the `2xx` range. |
+| [allow invalid certificates]{.smallcaps} (optional) | Toggle whether or not the request will be allowed to use invalid certificates. |
+| [follow redirects]{.smallcaps} (optional) | Toggle whether or not the request will follow redirects. |
+| [require https]{.smallcaps} (optional) | Toggle whether or not the request will require HTTPS. |
+| [headers]{.smallcaps} (optional) | Include headers with your request. |
+: **{{< fa cloud-arrow-up >}} HTTP Request** step configuration {.hover tbl-colwidths="[30,70]"}
+
 
 ### {{< fa circle-stop >}} End
 
@@ -203,9 +216,13 @@ Creates a time condition for displaying next available action.
 
 Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
 
-### {{< fa circle-nodes >}} Webhook
+#### {{< fa circle-nodes >}} Webhook
 
 When a workflow reaches a webhook step, the workflow will be paused. Set up a webhook step to listen for a `POST` request that resumes the workflow.
+
+#### {{< fa cloud-arrow-up >}} HTTP Request
+
+Set up a workflow step to send an HTTP request.
 
 #### {{< fa circle-stop >}} End
 
