Conditional requirements edit

--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -183,11 +183,11 @@ Sends a HTTP request:
     - **[body type]{.smallcaps}** — Select whether the body is `JSON` or `Text`.
     - **[body]{.smallcaps}** — Enter in your payload.
 
-[^request-timeout]: Max 300 seconds, or enter `0` to disable timeout.
+[^request-timeout]: Max 300 seconds, or enter `0` to disable timeout.*
 
 [^request-headers]:
 
-    1. Click **{{< fa plus >}} Add Header** to enter a header.
+    1. Click **{{< fa plus >}} Add Header** to enter a header.*
     2. Provide a **Header Name** and **Header Value**.
 
 
