--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -66,7 +66,36 @@ Select when you would like to [resume workflow:]{.smallcaps}
 
 ### {{< fa cloud-arrow-up >}} HTTP Request [optional]{.smallercaps .pink}
 
-placeholder
+::: {.panel-tabset}
+
+#### Request timeout
+
+- Enter in a request timeout in seconds under **[timeout (seconds)]{.smallcaps}**.
+
+- Max 300 seconds, or enter `0` to disable timeout.
+
+#### Request options
+
+Toggle the following request options on or off:
+
+- **[fail on non-]{.smallcaps}[2]{.smallercaps}[xx]{.smallcaps}** — Whether or not the request will be considered failed if the response status code is not in the `2xx` range.
+
+- **[allow invalid certificates]{.smallcaps}** — Whether or not the request will be allowed to use invalid certificates.
+
+- **[follow redirects]{.smallcaps}** — Whether or not the request will follow redirects.
+
+- **[require https]{.smallcaps}** — Whether or not the request will require HTTPS.
+
+#### Request headers
+
+Enter in optional headers to include with your request:
+
+1. Click **{{< fa plus >}} Add Header** under [headers]{.smallcaps} to enter a header.
+
+2. Provide a **Header Name** and **Header Value**.
+
+:::
+
 
 ::::
 
@@ -79,12 +108,15 @@ Configure conditional requirements for the following step types:
 
 - {{< fa arrow-pointer >}} User Action v2 **[optional]{.smallercaps}**
 
-- {{< fa users >}} Approval
+- {{< fa users >}} Approval **[required]{.smallercaps}**
 
-- {{< fa bullhorn >}} Broadcast
+- {{< fa bullhorn >}} Broadcast **[required]{.smallercaps}**
 
-- {{< fa maximize >}} Condition Branch
+- {{< fa maximize >}} Condition Branch **[required]{.smallercaps}**
 
-- {{< fa clock >}} Wait
+- {{< fa clock >}} Wait **[required]{.smallercaps}**
+
+- {{< fa cloud-arrow-up >}} HTTP Request **[optional]{.smallercaps}**
+
 
 ::::
