Editing: Conditional requirements

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -11,23 +11,36 @@ Conditional requirements are required or optional for the following step types:^
 
 ### {{< fa arrow-pointer >}} User Action v2 [optional]{.smallercaps .pink}
 
-User display rules
-: 1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
-2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
-        - Click **{{< fa plus >}} Add Rule** to add an independent rule.
-        - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
+::: {.panel-tabset}
 
-Require model inventory fields
-: - Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] to be entered by users during the action.
+#### User display rules
+
+1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
+
+2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
+
+    - Click **{{< fa plus >}} Add Rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
+
+#### Require model inventory fields
+
+- Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] to be entered by users during the action.
+
 - **Toggle Optional** to on if the field should be optional and not required.
 
-Enable user action deadline
-: 1. Toggle **Enable deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
+#### Enable user action deadline
+
+1. Toggle **Enable deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
+
 2. Then, under **[end action:]{.smallcaps}** select the type of deadline:
-        - **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
-        - **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
-        - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
-        - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
+    - **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
+    - **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
+    - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
+    - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
+
+:::
+
+
 
 ### {{< fa users >}} Approval [required]{.smallercaps .pink}
 
@@ -56,13 +69,30 @@ Select from either **Model Stakeholder Types**^[[Manage model stakeholder types]
 
 Select when you would like to [resume workflow:]{.smallcaps}
 
-- **After Time Interval** — Set the **[wait duration]{.smallcaps}** in minutes, hours, or days.
-- **At Specified Date** — Set a time to **[wait until]{.smallcaps}** as defined by a specific timestamp.
-- **At Specified Date on Model Field** — Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
-- **Time Delta from Specified Date on Model Field** —
-    a. Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
-    b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
-    c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
+::: {.panel-tabset}
+
+#### **After Time Interval**
+
+Set the **[wait duration]{.smallcaps}** in minutes, hours, or days.
+
+#### At Specified Date
+
+Set a time to **[wait until]{.smallcaps}** as defined by a specific timestamp.
+
+#### At Specified Date on Model Field
+
+Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
+
+##### Time Delta from Specified Date on Model Field
+
+a. Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
+
+b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
+
+c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
+
+:::
+
 
 ### {{< fa cloud-arrow-up >}} HTTP Request [optional]{.smallercaps .pink}
 
